se agrego la parte visual

--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,12 @@ body{
 main{
     flex-grow: 1;
 }
+
+.colorBoton {
+    background: rgb(94, 0, 128);
+    color: aliceblue;
+}
+.colorBoton:hover {
+    background: rgb(94, 0, 128);
+    color: aliceblue;
+}
