--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,18 @@ main{
     background: rgb(94, 0, 128);
     color: aliceblue;
 }
+
+.textMorado{
+    text-shadow: 0 0 5px #9413bb,
+    0 0 10px #9413bb,
+    0 0 15px #9413bb,
+    0 0 25px #9413bb,
+    0 0 30px #9413bb,
+    0 0 45px #9413bb,
+    0 0 50px #9413bb,
+    0 0 65px #9413bb,
+    0 0 75px #9413bb,
+    0 0 85px #9413bb,
+    0 0 95px #9413bb,
+    0 0 100px #9413bb;
+}
